--- a/test_site/_esker/templates/base.html
+++ b/test_site/_esker/templates/base.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
     <meta charset="utf-8">
@@ -40,6 +39,13 @@
         <ul>
           {% for tag, tagged_items in tags %}
           <li><a href="{{baseurl}}/tags/{{tag}}">{{tag}} ({{tagged_items | length }})</a></li>
+          {% endfor %}
+        </ul>
+
+        <h3> Sitemap </h3>
+        <ul>
+          {% for link in sitemap %}
+          <li><a href="{{link.url}}">{{link.title}}</a></li>
           {% endfor %}
         </ul>
       </aside>
