Refactor/Add: parser mod; toc
- Refactor: move parsing logic to parsing module.

- collect TOC links per md_file
- Munge the headings so that they have slugified ids.

--- a/test_site/_esker/templates/base.html
+++ b/test_site/_esker/templates/base.html
@@ -35,6 +35,17 @@
       </div>
 
       <aside class="flex: 1; background-color: #333">
+
+        {% if page %}
+        <h3> TOC </h3>
+        <ul>
+          {% for link in page.toc %}
+          <li><a href="{{link.url}}">{{link.title}}</a></li>
+          {% endfor %}
+        </ul>
+        {% endif %}
+
+
         <h3> Tags </h3>
         <ul>
           {% for tag, tagged_items in tags %}
