--- a/test_site/_esker/public/css/main.css
+++ b/test_site/_esker/public/css/main.css
@@ -25,6 +25,8 @@
 body {
   color: var(--color);
   background-color: var(--bg);
+  color: blue;
+
   max-width: 48em;
   margin: 0 auto;
   display: flex;
