Clean[batch]: cargo fix, refactor cli, renamed stuff.
- fix: clear errors on rebuild (they were accumulating before)
- refactor: renamed all *_build to be *_site
- refactor: templates to call "default.html" -> "single.html"

- Clean extra loops, parser
    - removed unnecessary loop in site.rs
    - moved old code from md_file into parser.

- Update: improve make cmds for test-site.
- Refactor: pass cli to site; run cargo fix.
- Add: better docs to cli commands.
- Add: ability to pass verbose flag to print errors.
- Add: home page to test_site.
- Clean: listen to clippy.

--- a/test_site/_esker/templates/base.html
+++ b/test_site/_esker/templates/base.html
@@ -3,9 +3,7 @@
     <meta charset="utf-8">
     <title>My Site - {% block title %} {% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta
-  name="{{config.title}}"
-  content="{{config.description}}" />
+    <meta name="{{config.title}}" content="{{config.description}}" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <script src="{{baseurl}}/public/js/main.js"></script>
     <link rel="stylesheet" href="{{baseurl}}/public/css/syntax-theme-dark.css" type="text/css" media="screen" />
