--- a/test_site/_esker/public/css/main.css
+++ b/test_site/_esker/public/css/main.css
@@ -1,23 +1,26 @@
-
-
 @import url("syntax-theme-dark.css") (prefers-color-scheme: dark);
 @import url("syntax-theme-light.css") (prefers-color-scheme: light);
 
-
 :root {
   --bg: rgb(253, 253, 253);
+  --bg-alt: rgb(253, 253, 253);
+  --border-col: rgb(70, 70, 70);
   --color: #333;
   --color-alt: #666;
   --link-color: #2980b9;
+  --font: "Avenir", "Arial";
 }
 
 /* CSS Variables (dark mode) */
 @media (prefers-color-scheme: dark) {
   :root {
-    --bg: #111;
+    --bg: rgb(33, 33, 39);
+    --bg-alt: rgb(28, 28, 38);
+    --border-col: rgb(25, 25, 25);
     --color: #dfdfdf;
     --color-alt: #666;
     --link-color: #fdcb6e;
+    --font: "Avenir", "Arial";
   }
 }
 
@@ -25,12 +28,13 @@
 body {
   color: var(--color);
   background-color: var(--bg);
-  max-width: 48em;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  font-family: "Charter", Arial;
-  padding: 64px 0;
+  font-family: var(--font);
+  font-size: 16px;
+  max-width: 1920px;
+  margin: 0 auto;
 }
 
 .footnote-definition {
@@ -40,6 +44,23 @@ body {
 
 .footnote-definition-label {
   margin-right: 16px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 32px;
+  border-bottom: 2px solid var(--border-col);
+  background-color: var(--bg);
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+.nav-link {
+  margin-left:16px;
 }
 
 
@@ -53,6 +74,19 @@ pre {
 a {
   color: var(--link-color);
 text-decoration: none;
+}
+
+main {
+  max-width: 60em;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 48px;
+  padding: 0 32px;
+}
+
+article {
+  font-size: 17px;
+  max-width: 36em;
 }
 
 a:visited {
@@ -78,9 +112,22 @@ img { max-width: 100%; }
 }
 
 .sidebar {
+  margin-top: 16px;
   display: flex;
   flex-direction: column;
-  margin-left: 64px;
+  margin-right: 80px;
+  padding: 32px;
+  position: sticky;
+  top: 20px;
+  height: 100vh;
+  overflow: auto;
+
+}
+
+@media(max-width: 1200px) {
+  .sidebar {
+    display: none;
+  }
 }
 
 .page-title {
