Clean: example site nav links

--- a/test_site/_esker/templates/base.html
+++ b/test_site/_esker/templates/base.html
@@ -17,9 +17,9 @@
     <nav>
       <div class="site-name">///// {{config.title}} </div>
       <ul class="flex">
-        <li><a class="nav-link" href="#replace_me">Post</a></li>
+        <li><a class="nav-link" href="#replace_me">Posts</a></li>
         <li><a class="nav-link" href="#replace_me">About</a></li>
-        <li><a class="nav-link" href="#replace_me">Feed</a></li>
+        <li><a class="nav-link" href="/feed.rss">Feed</a></li>
       </ul>
     </nav>
 
@@ -41,7 +41,7 @@
         {% if page %}
           {% if page.toc | length > 0 %}
           <h4> Contents </h4>
-          <ul>
+          <ul style="list-style-type: none">
             {% for link in page.toc %}
             {% set hlvl = link.link_type.Toc.heading_level -%}
             {% set indent_width = hlvl * 4 -%}
